--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Elevator Saga - the elevator programming game</title>
+    <title>Archronos Tech Test</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="font-awesome-4.1-1.0/css/font-awesome.min.css" type="text/css" media="all">
     <link href='//fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
@@ -19,17 +20,18 @@
 
     <script type="text/javascript" src="libs/unobservable.js"></script>
 
-    <script type="text/javascript" src="base.js"></script>
-    <script type="text/javascript" src="movable.js"></script>
-    <script type="text/javascript" src="floor.js"></script>
-    <script type="text/javascript" src="user.js"></script>
-    <script type="text/javascript" src="elevator.js"></script>
-    <script type="text/javascript" src="interfaces.js"></script>
-    <script type="text/javascript" src="world.js"></script>
-    <script type="text/javascript" src="presenters.js"></script>
-    <script type="text/javascript" src="challenges.js"></script>
-    <script type="text/javascript" src="fitness.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="js/base.js"></script>
+    <script type="text/javascript" src="js/movable.js"></script>
+    <script type="text/javascript" src="js/floor.js"></script>
+    <script type="text/javascript" src="js/user.js"></script>
+    <script type="text/javascript" src="js/elevator.js"></script>
+    <script type="text/javascript" src="js/interfaces.js"></script>
+    <script type="text/javascript" src="js/world.js"></script>
+    <script type="text/javascript" src="js/presenters.js"></script>
+    <script type="text/javascript" src="js/challenges.js"></script>
+    <script type="text/javascript" src="js/fitness.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="custom.js"></script>
 
 
     <script type="text/template" id="user-template">
@@ -71,7 +73,6 @@
         <div class="left">
             <h3>Challenge #{num}: {challenge.condition.description}</h3>
         </div>
-        <button class="right startstop unselectable" style="width: 110px">{startButtonText}</button>
         <h3 class="right">
             <i class="fa fa-minus-square timescale_decrease unselectable"></i>
             <span class="emphasis-color" style="display: inline-block; width: 22px; text-align: center">{timeScale}</span>
@@ -83,69 +84,20 @@
         <h5 class="error" style="display: {errorDisplay}"><i class="fa fa-warning error-color"></i> There is a problem with your code: {errorMessage}</h5>
     </script>
 
-    <script type="text/plain" id="default-elev-implementation">
-{
-    init: function(elevators, floors) {
-        var elevator = elevators[0]; // Let's use the first elevator
-
-        // Whenever the elevator is idle (has no more queued destinations) ...
-        elevator.on("idle", function() {
-            // let's go to all the floors (or did we forget one?)
-            elevator.goToFloor(0);
-            elevator.goToFloor(1);
-        });
-    },
-    update: function(dt, elevators, floors) {
-        // We normally don't need to do anything here
-    }
-}
-    </script>
-    <script type="text/plain" id="devtest-elev-implementation">
-{
-    init: function(elevators, floors) {
-        var selectElevatorForFloorPickup = function(floorNum) {
-            return _.max(elevators, function(e) {
-                return (_.contains(e.destinationQueue, floorNum) ? 4 : 0) +
-                    (-e.destinationQueue.length*e.destinationQueue.length) +
-                    (-e.loadFactor()*e.loadFactor() * 3);
-            });
-        };
-
-        _.each(floors, function(floor) {
-            floor.on("down_button_pressed up_button_pressed", function() {
-                var elevator = selectElevatorForFloorPickup(floor.level);
-                if(!_.contains(elevator.destinationQueue, floor.level)) {
-                    elevator.goToFloor(floor.level);
-                }
-            });
-        });
-        _.each(elevators, function(elevator) {
-            elevator.on("floor_button_pressed", function(floorNum) {
-                elevator.goToFloor(floorNum);
-            });
-            elevator.on("idle", function() {
-                elevator.goToFloor(0);
-            });
-        });
-    },
-    update: function(dt, elevators, floors) {
-    }
-}
-    </script>
-
 
 </head>
+
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="left">Elevator Saga <em class="emphasis-color">The elevator programming game</em></h1>
-            <a class="right" href="https://github.com/magwo/elevatorsaga/wiki/">Wiki & Solutions</a>
+            <h1 class="left">Archronos Tech Test <em class="emphasis-color">The elevator game</em></h1>
             <a class="right" href="documentation.html#docs">Documentation</a>
             <a class="right" href="documentation.html">Help</a>
         </div>
 
         <noscript>
-            <h2>Your browser does not appear to support JavaScript. This page contains a browser-based programming game implemented in JavaScript.</h2>
+            <h2>Your browser does not appear to support JavaScript. This page contains a browser-based programming game
+                implemented in JavaScript.</h2>
         </noscript>
 
         <div class="challenge" style="height: 40px">
@@ -156,23 +108,23 @@
             <div class="innerworld">
             </div>
             <div class="statscontainer">
-                <div style="top: 20px"><span class="key">Transported</span><span class="value transportedcounter"></span></div>
-                <div style="top: 40px"><span class="key">Elapsed time</span><span class="value elapsedtime"></span></div>
-                <div style="top: 60px"><span class="key">Transported/s</span><span class="value transportedpersec"></span></div>
-                <div style="top: 80px"><span class="key">Avg waiting time</span><span class="value avgwaittime"></span></div>
-                <div style="top: 100px"><span class="key">Max waiting time</span><span class="value maxwaittime"></span></div>
-                <div style="top: 120px"><span class="key" title="Number of floors that have been travelled by elevators">Moves</span><span class="value movecount"></span></div>
+                <div style="top: 20px"><span class="key">Transported</span><span
+                        class="value transportedcounter"></span></div>
+                <div style="top: 40px"><span class="key">Elapsed time</span><span class="value elapsedtime"></span>
+                </div>
+                <div style="top: 60px"><span class="key">Transported/s</span><span
+                        class="value transportedpersec"></span></div>
+                <div style="top: 80px"><span class="key">Avg waiting time</span><span class="value avgwaittime"></span>
+                </div>
+                <div style="top: 100px"><span class="key">Max waiting time</span><span class="value maxwaittime"></span>
+                </div>
+                <div style="top: 120px"><span class="key"
+                        title="Number of floors that have been travelled by elevators">Moves</span><span
+                        class="value movecount"></span></div>
             </div>
         </div>
 
         <div class="codestatus"></div>
-        <div class="code">
-            <textarea name="Code" id="code"></textarea>
-        </div>
-        <button id="button_reset" style="float: left">Reset</button>
-        <button id="button_resetundo" style="float: left">Undo reset</button>
-        <button id="button_apply" style="float: right">Apply</button>
-        <button id="button_save" style="float: right">Save</button>
         <span id="save_message" style="float: right"></span>
         <span id="fitness_message" style="float: right"></span>
         <div style="clear:both;"></div>
@@ -180,22 +132,7 @@
         <div style="margin-top: 20px">
             <h3>Confused? Open the <a href="documentation.html">Help and API documentation</a> page</h3>
         </div>
-        <div class="footer">
-            <h4>Made by Magnus Wolffelt and contributors</h4>
-            <h4>Version <span class="emphasis-color">1.6.5</span></h4>
-            <h4><a href="https://github.com/magwo/elevatorsaga">Source code</a> on GitHub</h4>
-            <h4><a href="test/index.html">Run tests</a></h4>
-        </div>
     </div>
-
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-56810935-1', 'auto');
-        ga('send', 'pageview');
-    </script>
 </body>
+
 </html>
